# rust_screen_capture

./: Cargo.toml  Makefile  README.md
examples/: ffplay.rs
src/: main.rs
