[package]
name = "hms"
version = "0.1.0"
authors = ["arbaaz <abdularbaaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-graphics = "0.22.2"
core-foundation = "0.9.1"
foreign-types = "0.3.0"
chrono = "0.4.19"